# agent-workflow

./: .dependency-config.yaml  .env.example  .gitignore  404.html  AUDIT_COVERAGE_PLAN.md  AUDIT_DOCUMENTATION_PACKAGE.md  CHAT_INTERFACE_TECHNICAL_SPEC.md  CI_CD_INTEGRATION_VERIFICATION.md  CLAUDE.md  CLI_SPECIFICATIONS.md  COLOR_SCHEMES_SUMMARY.md  COMPLIANCE_MONITORING_SUMMARY.md  COMPLIANCE_TRACKING_GUIDE.md  COMPREHENSIVE_TEST_COVERAGE_REPORT.md  CONFIG_TEMPLATES.md  CONTEXT_COLLECTION_IMPROVEMENT_PLAN.md  CONTEXT_COLLECTION_ROADMAP.md  CONTEXT_MANAGER_CLEANUP_DETAILS.md  CONTEXT_MANAGER_V2_UNIFIED_DESIGN.md  COVERAGE_ANALYSIS.md  CRITICAL_MODULE_ANALYSIS.md  DIRECTORY_TREE_IMPLEMENTATION.md  DISCORD_BOT_AUDIT_REPORT.md  DISCORD_BOT_TEST_COVERAGE_REPORT.md  DOCUMENTATION_OPTIMIZATION_SUMMARY.md  DOCUMENTATION_STATUS_REPORT.md  EXECUTIVE_SUMMARY_AUDIT_COMPLIANCE.md  FINAL_COVERAGE_ANALYSIS.md  FINAL_GOVERNMENT_AUDIT_COMPLIANCE_REPORT.md  FINAL_VALIDATION_REPORT.md  GLOBAL_ORCHESTRATOR_COVERAGE_REPORT.md  GRAPH_LIBRARIAN_ARCHITECTURE.md  GRAPH_LIBRARIAN_COMPARISON.md  GRAPH_LIBRARIAN_MIGRATION_PLAN.md  GRAPH_LIBRARIAN_SUMMARY.md  HITL_COMMANDS.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STARTER_KIT.md  LIBRARIAN_ADVANCED_SCENARIOS.md  LIBRARIAN_API_SPECIFICATION.md  (+69 more)
.audit-env/: pyvenv.cfg
.claude/: settings.local.json
.github/workflows/: dependency-check.yml  docs-check.yml  docs.yml  test.yml
CLAUDE/: index.html
STYLE_GUIDE/: index.html
advanced/: index.html
advanced/architecture-detailed/: index.html
advanced/code/: index.html
advanced/component/: index.html
advanced/container/: index.html
advanced/context/: index.html
advanced/data-flow/: index.html
advanced/orchestration-repo/: index.html
advanced/project-repo/: index.html
advanced/security-implementation/: index.html
advanced/testing/: index.html
agent_workflow/: CLAUDE.md  __init__.py  orchestrator.py
agent_workflow/agents/: __init__.py  code_agent.py  data_agent.py  design_agent.py  qa_agent.py
agent_workflow/cli/: __init__.py  config.py  dev.py  info.py  init.py  main.py  migrate.py  orchestrator.py  project.py  setup.py  utils.py  web.py
agent_workflow/config/: __init__.py  schema.py  templates.py
agent_workflow/context/: __init__.py  background.py  cache.py  config.py  index.py  manager.py  memory.py  token_calculator.py
agent_workflow/core/: __init__.py  data_models.py  models.py  orchestrator.py  project_storage.py  state_machine.py  storage.py
agent_workflow/integrations/: __init__.py
agent_workflow/security/: __init__.py
architecture/: index.html
architecture/component-architecture/: index.html
architecture/context-algorithms/: index.html
architecture/context-api-specification/: index.html
architecture/context-evaluation-framework/: index.html
architecture/context-implementation-plan/: index.html
architecture/context-management-system/: index.html
architecture/overview/: index.html
architecture/parallel-agent-pool-management/: index.html
architecture/parallel-conflict-algorithms/: index.html
architecture/parallel-context-integration/: index.html
architecture/parallel-tdd-architecture/: index.html
architecture/parallel-tdd-comprehensive-implementation-plan/: index.html
architecture/parallel-tdd-implementation-strategy/: index.html
architecture/parallel-tdd-technical-specification/: index.html
architecture/parallel-tdd-testing-strategy/: index.html
archive/compliance/: index.html
aw_docs/: README.md  claude_tools.py
concepts/: index.html
data/: config.yml
deployment/: index.html
development/: index.html
docs/: README.md  c4-code.md  command_state_machine.md  testing-plan.md
docs_src/: CLAUDE.md  STYLE_GUIDE.md  index.md  theme-integration-guide.md  theme-preview.md  ux-enhancement-guide.md
getting-started/: index.html
js/: enhanced-navigation.js  mermaid-zoom.js
lib/: CLAUDE.md  agent_memory.py  agent_pool.py  agent_tool_config.py  chat_state_sync.py  claude_client.py  collaboration_manager.py  command_suggestions.py  conflict_resolver.py  context_compressor.py  context_config.py  context_filter.py  context_index.py  context_learning.py  context_manager.py  context_manager_factory.py  context_monitoring.py  cross_project_intelligence.py  data_models.py  discord_bot.py  error_handler.py  error_manager.py  global_orchestrator.py  multi_project_config.py  multi_project_discord_bot.py  multi_project_monitoring.py  multi_project_security.py  parallel_tdd_coordinator.py  parallel_tdd_engine.py  project_storage.py  project_storage.py,cover  resource_scheduler.py  simple_context_manager.py  state_broadcaster.py  state_machine.py  tdd_models.py  tdd_state_machine.py  token_calculator.py
macros/: __init__.py
planning/: index.html
pypi_env/: pyvenv.cfg
scripts/: CLAUDE.md  consolidate_context_docs.py  multi_project_orchestrator.py  orchestrator.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
static/: app.js  context_manager.css  context_manager.js  context_visualizations.js  style.css
stylesheets/: color-schemes.css  extra.css
templates/: context_manager.html  index.html
test_env/: pyvenv.cfg
tests/: CLAUDE.md  README.md  conftest.py  pytest.ini  quick_validation.py  run_comprehensive_tests.py  validate_infrastructure.py
theme-integration-guide/: index.html
theme-preview/: index.html
tools/: CLAUDE.md  README_DOCS_CI.md  audit_links.py  check_docs_quality.py  fix_documentation_links.py  setup_pre_commit_hook.py  test_docs_ci.py
user-guide/: index.html
ux-enhancement-guide/: index.html
(+790 files in other folders)
